# plai

./: .gitignore  .gitmodules  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  version.txt
components/LovyanGFX/src/lgfx/v1/: LGFXBase.cpp  LGFXBase.hpp
main/: CMakeLists.txt  Kconfig.projbuild  common_define.h  idf_component.yml  main.cpp
main/apps/app_channels/: app_channels.cpp  app_channels.h
main/apps/app_graphs/: app_graphs.cpp  app_graphs.h
main/apps/app_monitor/: app_monitor.cpp  app_monitor.h
main/apps/app_nodes/: app_nodes.cpp  app_nodes.h
main/apps/app_settings/: app_settings.cpp  app_settings.h
main/apps/app_stats/: app_stats.cpp  app_stats.h
main/apps/launcher/: launcher.cpp  launcher.h
main/apps/launcher/views/boot_anim/: boot_anim.cpp
main/apps/launcher/views/system_bar/: system_bar.cpp
main/apps/utils/theme/: lgfx_efont_unicode.c  lgfx_efont_unicode.h  theme_define.h  unicode_fonts.cpp  unicode_fonts.hpp
main/apps/utils/ui/: dialog.cpp  settings_screen.cpp
main/hal/: hal.h  hal_cardputer.cpp  hal_cardputer.h  hal_config.h
main/hal/gps/: gps.cpp  gps.h
main/hal/keyboard/: keyboard_reader_tca8418.cpp
main/hal/radio/: sx1262.cpp  sx1262.h
main/hal/sdcard/: sdcard.cpp
main/hal/speaker/: speaker.h
main/mesh/: mesh_data.cpp  mesh_data.h  mesh_service.cpp  mesh_service.h  node_db.cpp  packet_router.cpp  packet_router.h
main/settings/: settings.cpp  settings.h
